# synacore-vm-challenge

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.devcontainer/: devcontainer.json
src/: main.rs
src/environment/: mod.rs
src/operations/: address.rs  math.rs  mod.rs
src/reader/: mod.rs
