[package]
name = "synacore-vm"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for binary size
strip = true  # Automatically strip symbols from the binary.

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0
incremental = true

[dependencies]

[dev-dependencies]
cargo-husky = { version = "=1.5.0", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
